# work-peripheral-driver-android

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: litepal.xml
app/src/main/res/drawable/: button.xml  button_background.xml  button_clicked.xml  button_disabled.xml  edit_text_background.xml  frame_background.xml  group_background.xml  list_border.xml  list_border_circle_angle_wide.xml  listview_bg.xml  section_text_background.xml  selector_card.xml  selector_check_background.xml  selector_check_ca_bg.xml  selector_desk.xml  selector_edit_border.xml  selector_home.xml  selector_radio_config.xml  selector_scanner_barcode.xml  selector_scanner_model.xml  selector_scanner_onoff.xml  selector_scanner_qrcode.xml  selector_scanner_scanning.xml  spinner_background.xml
app/src/main/res/layout/: activity_login.xml  activity_main.xml  fragment_camera_test.xml  fragment_card_read_test.xml  fragment_card_sender_test.xml  fragment_configure.xml  fragment_debugging.xml  fragment_desk.xml  fragment_desk_config.xml  fragment_device_config.xml  fragment_elocker.xml  fragment_face_contrast.xml  fragment_face_recognition.xml  fragment_face_save.xml  fragment_general_peripherals.xml  fragment_host.xml  fragment_iccard_sender.xml  fragment_image_recognition.xml  fragment_network_test.xml  fragment_printer_test.xml  fragment_rfid.xml  fragment_rotation.xml  fragment_rotation_config.xml  fragment_rotation_control.xml  fragment_rotation_motor.xml  fragment_scanner.xml  fragment_servo_debug.xml  fragment_shelf_state.xml  fragment_simcard_sender.xml  fragment_sound_test.xml  fragment_stability_test.xml  item_desk_config.xml  item_shelf_add.xml  item_shelf_layer.xml  (+5 more)
base/: build.gradle
base/src/main/: AndroidManifest.xml
native/: CMakeLists.txt  build.gradle
native/src/androidTest/java/com/hzdongcheng/alxdrivers/: ExampleInstrumentedTest.java
native/src/main/: AndroidManifest.xml
native/src/main/cpp/: Modbus4j.cpp  Modbus4j.h  SerialPort4J.cpp  SerialPort4J.h  SerialPortBase.cpp  SerialPortBase.h  com_hzdongcheng_alxdrivers_jni_JNIModbus.cpp  com_hzdongcheng_alxdrivers_jni_JNIModbus.h  com_hzdongcheng_alxdrivers_jni_JNISerialPort.cpp  com_hzdongcheng_alxdrivers_jni_JNISerialPort.h  config.h
native/src/test/java/com/hzdongcheng/alxdrivers/: ExampleUnitTest.java
service/: build.gradle
service/src/main/: AndroidManifest.xml
(+245 files in other folders)
